--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.14.1",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
