--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/dark-theme": "^2.0.2",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.14.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
